--- a/WPF_HOME_WORK/MainWindow.xaml
+++ b/WPF_HOME_WORK/MainWindow.xaml
@@ -10,14 +10,13 @@
         <TextBlock HorizontalAlignment="Left" Margin="59,53,0,0" Text="Введите имя" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"/>
         <TextBox x:Name="Enter_a_name" HorizontalAlignment="Left" Margin="59,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="125" FontSize="20" Height="31"/>
         <TextBlock HorizontalAlignment="Left" Margin="59,130,0,0" Text="Введите профессию" TextWrapping="Wrap" VerticalAlignment="Top" Width="125" FontSize="20" FontWeight="Bold"/>
-        <TextBox x:Name="Enter_a_profession" HorizontalAlignment="Left" Margin="59,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="125" FontSize="20" Height="31"/>
         <TextBlock HorizontalAlignment="Left" Margin="59,248,0,0" Text="Показатели" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"/>
         <TextBlock HorizontalAlignment="Left" Margin="82,287,0,0" Text="Сила" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"/>
-        <Button x:Name="btn_add1" Content="Add" HorizontalAlignment="Left" Margin="59,535,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btn_add_Click"/>
-        <Button x:Name="btn_delete1" Content="Delete" HorizontalAlignment="Left" Margin="119,535,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btn_add_Click"/>
+        <Button x:Name="btn_add" Content="Add" HorizontalAlignment="Left" Margin="59,535,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btn_add_Click"/>
+        <Button x:Name="btn_delete" Content="Delete" HorizontalAlignment="Left" Margin="119,535,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btn_delete_Click"/>
         <ListBox x:Name="ListName" Margin="323,41,323,41" Loaded="ListName_Loaded_1" SelectionChanged="ListName_SelectionChanged"/>
         <Button Content="-" HorizontalAlignment="Left" Margin="31,283,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button Content="+" HorizontalAlignment="Left" Margin="225,283,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="284,283,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
         <Button Content="UpdateUser" HorizontalAlignment="Left" Margin="59,579,0,0" VerticalAlignment="Top" Width="125" Height="31" FontSize="20" FontWeight="Bold"/>
         <TextBlock HorizontalAlignment="Left" Margin="82,330,0,0" Text="Ловкость" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="20"/>
         <TextBlock HorizontalAlignment="Left" Margin="82,371,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="92" Text="Интелект" FontWeight="Bold" FontSize="20"/>
@@ -25,12 +24,17 @@
         <Button Content="-" HorizontalAlignment="Left" Margin="31,326,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
         <Button Content="-" HorizontalAlignment="Left" Margin="31,367,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
         <Button Content="-" HorizontalAlignment="Left" Margin="31,418,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button Content="+" HorizontalAlignment="Left" Margin="225,326,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button Content="+" HorizontalAlignment="Left" Margin="225,369,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button Content="+" HorizontalAlignment="Left" Margin="266,411,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="284,328,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="284,371,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="284,411,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
         <TextBlock HorizontalAlignment="Left" Margin="82,467,0,0" Text="Доп.очки" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="20"/>
         <Button Content="-" HorizontalAlignment="Left" Margin="31,467,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button Content="+" HorizontalAlignment="Left" Margin="225,467,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="284,467,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <ComboBox x:Name="Enter_a_profession" HorizontalAlignment="Left" Margin="31,207,0,0" VerticalAlignment="Top" Width="211" Height="36">
+            <ListBoxItem Content="Воин" FontWeight="Bold" FontSize="20"/>
+            <ListBoxItem Content="Волшебник" FontWeight="Bold" FontSize="20"/>
+            <ListBoxItem Content="Лучник" FontWeight="Bold" FontSize="20"/>
+        </ComboBox>
 
     </Grid>
 </Window>
