--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -7,18 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBlock x:Name="namePersonage" HorizontalAlignment="Left" Margin="48,95,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Height="31" Width="236" FontSize="24" Padding="5,0,0,0">
-            <TextBlock.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="1"/>
-                    <GradientStop Color="White"/>
-                    <GradientStop Color="#FFBABABA" Offset="0.467"/>
-                    <GradientStop Color="#FFBBBBBB" Offset="0.86"/>
-                    <GradientStop Color="#FFBBBBBB"/>
-                </LinearGradientBrush>
-            </TextBlock.Background>
-        </TextBlock>
-        <TextBlock x:Name="txtPower" HorizontalAlignment="Left" Margin="415,136,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9"/>
+        <TextBlock x:Name="txtPower" HorizontalAlignment="Left" Margin="415,136,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9"/>
         <Label Content="Personage" HorizontalAlignment="Left" Margin="48,53,0,0" VerticalAlignment="Top" FontSize="20" RenderTransformOrigin="0.697,1.777"/>
         <Label Content="Choose a profession" HorizontalAlignment="Left" Margin="48,161,0,0" VerticalAlignment="Top" Width="198" FontSize="20"/>
         <StackPanel HorizontalAlignment="Left" Margin="48,208,0,0" Orientation="Vertical" VerticalAlignment="Top" Height="121">
@@ -32,20 +21,21 @@
         <Label Content="Skill" HorizontalAlignment="Left" Margin="306,180,0,0" VerticalAlignment="Top" Width="94" FontSize="22"/>
         <Label Content="Intellect" HorizontalAlignment="Left" Margin="306,224,0,0" VerticalAlignment="Top" Width="94" FontSize="22"/>
         <Label Content="Stamina" HorizontalAlignment="Left" Margin="306,267,0,0" VerticalAlignment="Top" Width="94" FontSize="22"/>
-        <TextBlock x:Name="txtSkill" HorizontalAlignment="Left" Margin="415,179,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9"/>
-        <TextBlock x:Name="txtIntellect" HorizontalAlignment="Left" Margin="415,226,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9" RenderTransformOrigin="0.622,3.935"/>
-        <TextBlock x:Name="txtStamina" HorizontalAlignment="Left" Margin="415,267,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9" RenderTransformOrigin="0.61,3.401"/>
+        <TextBlock x:Name="txtSkill" HorizontalAlignment="Left" Margin="415,179,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9"/>
+        <TextBlock x:Name="txtIntellect" HorizontalAlignment="Left" Margin="415,226,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9" RenderTransformOrigin="0.622,3.935"/>
+        <TextBlock x:Name="txtStamina" HorizontalAlignment="Left" Margin="415,267,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9" RenderTransformOrigin="0.61,3.401"/>
         <Label Content="Health" HorizontalAlignment="Left" Margin="306,43,0,0" VerticalAlignment="Top" Width="101" Height="41" FontSize="22" HorizontalContentAlignment="Right"/>
         <TextBlock x:Name="txtHealth" HorizontalAlignment="Left" Margin="425,40,0,0" TextWrapping="Wrap" Text="health" VerticalAlignment="Top" Height="44" Width="100" FontSize="24" Background="#FFD8C9C9" TextAlignment="Center"/>
         <TextBox x:Name="txtListOfPersonages" HorizontalAlignment="Left" Margin="588,55,0,0" TextWrapping="Wrap" Text="list of personages" VerticalAlignment="Top" Width="186" Height="244" FontSize="18" Background="#FFD8C9C9"/>
         <Button x:Name="btnShow" Content="Show" HorizontalAlignment="Left" Margin="313,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14"/>
-        <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="415,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14"/>
-        <Button x:Name="btnAddToDB" Content="Add to DB" HorizontalAlignment="Left" Margin="518,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14"/>
+        <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="415,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14" Click="btnClear_Click"/>
+        <Button x:Name="btnCreate" Content="Create" HorizontalAlignment="Left" Margin="518,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14" Click="btnCreate_Click"/>
         <Button x:Name="btnUpdate" Content="Update" HorizontalAlignment="Left" Margin="622,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14"/>
         <Button x:Name="btnPowerBoost" Content="+" HorizontalAlignment="Left" Margin="518,136,0,0" VerticalAlignment="Top" Height="32" Width="26" BorderThickness="2,2,2,2" Background="#FFBED8C7" FontSize="20" FontStretch="UltraExpanded" Foreground="#FF16271B" Padding="1,-5,1,1"/>
         <Button x:Name="btnSkillBoost" Content="+" HorizontalAlignment="Left" Margin="518,180,0,0" VerticalAlignment="Top" Height="32" Width="26" BorderThickness="2,2,2,2" Background="#FFBED8C7" FontSize="20" FontStretch="UltraExpanded" Foreground="#FF16271B" Padding="1,-5,1,1"/>
         <Button x:Name="btnIntellectBoost" Content="+" HorizontalAlignment="Left" Margin="518,226,0,0" VerticalAlignment="Top" Height="32" Width="26" BorderThickness="2,2,2,2" Background="#FFBED8C7" FontSize="20" FontStretch="UltraExpanded" Foreground="#FF16271B" Padding="1,-5,1,1"/>
         <Button x:Name="btnStaminaBoost" Content="+" HorizontalAlignment="Left" Margin="518,268,0,0" VerticalAlignment="Top" Height="32" Width="26" BorderThickness="2,2,2,2" Background="#FFBED8C7" FontSize="20" FontStretch="UltraExpanded" Foreground="#FF16271B" Padding="1,-5,1,1"/>
+        <TextBox x:Name="txtName" HorizontalAlignment="Left" Margin="48,87,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="236" Height="49" Background="#FFCEC4D0" BorderThickness="3,3,3,3" FontSize="28" Padding="5,0,0,0" TextChanged="txtName_TextChanged" GotFocus="txtName_GotFocus"/>
 
     </Grid>
 </Window>
