--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -62,6 +62,7 @@
             <ListBoxItem Content="Bow"/>
             <ListBoxItem Content="Staff"/>
         </ComboBox>
+        <Button x:Name="buttonAttack" Content="Attack" HorizontalAlignment="Left" Margin="517,354,0,0" VerticalAlignment="Top" Width="60" FontSize="14" FontWeight="Bold" Click="buttonAttack_Click"/>
 
     </Grid>
 </Window>
