--- a/WPF_HOME_WORK/MainWindow.xaml
+++ b/WPF_HOME_WORK/MainWindow.xaml
@@ -16,7 +16,7 @@
         <Button x:Name="btn_delete" Content="Delete" HorizontalAlignment="Left" Margin="119,535,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btn_delete_Click"/>
         <ListBox x:Name="ListName" Margin="323,41,323,41" Loaded="ListName_Loaded_1" SelectionChanged="ListName_SelectionChanged"/>
         <Button Content="-" HorizontalAlignment="Left" Margin="31,283,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button Content="+" HorizontalAlignment="Left" Margin="284,283,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button x:Name="btn_plus_power" Content="+" HorizontalAlignment="Left" Margin="284,283,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
         <Button Content="UpdateUser" HorizontalAlignment="Left" Margin="59,579,0,0" VerticalAlignment="Top" Width="125" Height="31" FontSize="20" FontWeight="Bold"/>
         <TextBlock HorizontalAlignment="Left" Margin="82,330,0,0" Text="Ловкость" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="20"/>
         <TextBlock HorizontalAlignment="Left" Margin="82,371,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="92" Text="Интелект" FontWeight="Bold" FontSize="20"/>
@@ -24,12 +24,12 @@
         <Button Content="-" HorizontalAlignment="Left" Margin="31,326,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
         <Button Content="-" HorizontalAlignment="Left" Margin="31,367,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
         <Button Content="-" HorizontalAlignment="Left" Margin="31,418,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button Content="+" HorizontalAlignment="Left" Margin="284,328,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button Content="+" HorizontalAlignment="Left" Margin="284,371,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button x:Name="lbl_endurance" Content="+" HorizontalAlignment="Left" Margin="284,411,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button x:Name="btn_plus_agility" Content="+" HorizontalAlignment="Left" Margin="284,328,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button x:Name="btn_plus_intellect" Content="+" HorizontalAlignment="Left" Margin="284,371,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button x:Name="btn_plus_endurance" Content="+" HorizontalAlignment="Left" Margin="284,411,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
         <TextBlock HorizontalAlignment="Left" Margin="82,467,0,0" Text="Доп.очки" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="20"/>
         <Button Content="-" HorizontalAlignment="Left" Margin="31,467,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
-        <Button x:Name="lbl_extra_points" Content="+" HorizontalAlignment="Left" Margin="284,467,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button x:Name="btn_plus_extra_points" Content="+" HorizontalAlignment="Left" Margin="284,467,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
         <ComboBox x:Name="Enter_a_profession" HorizontalAlignment="Left" Margin="31,207,0,0" VerticalAlignment="Top" Width="211" Height="36" Cursor="" FontSize="20">
             <ListBoxItem Content="Воин" FontWeight="Bold" FontSize="20"/>
             <ListBoxItem Content="Волшебник" FontWeight="Bold" FontSize="20"/>
@@ -38,8 +38,8 @@
         <Label x:Name="lbl_power" Content="0" HorizontalAlignment="Left" Margin="253,283,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="15"/>
         <Label x:Name="lbl_agility" Content="0" HorizontalAlignment="Left" Margin="253,328,0,0" VerticalAlignment="Top" FontSize="15" FontWeight="Bold"/>
         <Label x:Name="lbl_intellect" Content="0" HorizontalAlignment="Left" Margin="253,371,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="15"/>
-        <Label Content="0" HorizontalAlignment="Left" Margin="253,411,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="15"/>
-        <Label Content="0" HorizontalAlignment="Left" Margin="253,464,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="15"/>
+        <Label x:Name="lbl_endurance" Content="0" HorizontalAlignment="Left" Margin="253,411,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="15"/>
+        <Label x:Name="lbl_extra_points" Content="0" HorizontalAlignment="Left" Margin="253,464,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="15"/>
 
     </Grid>
 </Window>
